--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "clsx": "^2.1.1",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
+    "lenis": "^1.3.17",
     "lucide-react": "^0.561.0",
+    "motion": "^12.29.0",
     "next": "16.0.10",
     "next-intl": "^4.6.0",
     "react": "19.2.1",
